<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Signos do Zodíaco</string>
    <string name="action_settings">Settings</string>   
    <string name="title_activity_atividade2">Sorte do Dia</string>    
    <string name="tituloapptextView">APP Zodiacal</string>
    <string name="participartextView">Deseja receber a Sorte do Dia?</string>
    <string name="bt">ver sorte do dia</string>
	<string name="versotebtn">clique aqui</string>
	<string name="titlevertextView">Veja oque os Astros reservaram para seu dia</string>
	<string name="sair">sair</string>	
	
</resources>
