<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PrimeiraActivity" >

    <ImageView
               android:id="@+id/imageView1"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:src="@drawable/ic_launcher" />

           <TextView
               android:id="@+id/tituloapptextView"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:gravity="center"
               android:paddingTop="20dp"
               android:text="@string/tituloapptextView"
               android:textAppearance="?android:attr/textAppearanceLarge"
               android:textColor="#0077cc"
               android:typeface="sans" />
           
            <ProgressBar
		        android:id="@+id/progress_bar"
		        style="?android:attr/progressBarStyleHorizontal"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" />

            <ScrollView
                android:id="@+id/scrollView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="277dp"
                    android:orientation="vertical" >

                    <ListView
                        android:id="@+id/list_view"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:layout_weight="0.10"
                        android:background="#3b4045" >

                    </ListView>

                    <TextView
                        android:id="@+id/participartextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/participartextView"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#0077cc"
                        android:typeface="sans" />

                    <Button
                        android:id="@+id/bt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:onClick="gerarNotificacao"
                        android:text="@string/bt" />
                </LinearLayout>

            </ScrollView>
		
</LinearLayout>
